<resources>
    <string name="app_name">Chat App</string>
    <string name="messag">Messaggio</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="signin">SIGN IN</string>
    <string name="loginface">login as facebook</string>
    <string name="signup">Sign Up</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Last Name</string>
</resources>
